[package]
name = "chess-again"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"

[dependencies]
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "*", features = ["image"] }
env_logger = "0.11.8"
image = { version = "0.25", features = ["png"] }
